# SagaBreaker

./: .gitignore  app.py  app.ts  package-lock.json  package.json  plot-outline.txt  pyproject.toml  readme.md
output/: generated-joke.txt  generated-text.txt  plot-outline.txt
src/: __init__.py  models.py  orchestrator.py
src/agents/: architect.py  critic.py  writer.py
src/api/: openAI.ts
src/utils/: console.py  consoleUtils.ts  fileUtils.ts  fileWriter.ts  file_io.py  inputPrompter.ts
src/workflow/: chapterSummaries.ts  plotOutline.ts
test/api/: openAI.test.ts
