[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagabreaker"
version = "2.0.0"
description = "Agentic novel-writing system powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
